public/style.css
/* General Styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  
  body {
    font-family: Arial, sans-serif;
    background-color: #333;
    padding: 1rem;
    color: #fff;
  }
  
  .hide-button {
    display: none;
  }
  
  /* Button Styles */
  button {
    cursor: pointer;
    background-color: #2f4443;
    color: #fff;
    border: none;
    padding: 0.5rem;
    font-size: 1rem;
    border-radius: 5px;
    margin-right: 3px;
    margin-top: 5px;
  }
  
  button:hover {
    background-color: #2f4443;
  }
  
  /* Other Components Styles */
  input {
    padding: 0.5rem;
    font-size: 1rem;
    border-radius: 5px;
  }
  
  label {
    margin-bottom: 0.5rem;
  }
  
  .mistake-count {
    text-align: right;
  }
  
  .move-number {
    font-size: 16px;
    text-align: right;
  }
  
  .feedback-container {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    width: 100%;
  }

  a:visited {
    color: #d3d3d3;  
  }
  

  /* Default style for desktop and larger screens */
  #board {
    width: 60%;
  }
  
  /* Other Containers */
  #openings-container, #flagged-drills-container, #manage-openings-container, #login-container {
    display: none;
  }
  
  .container {
    margin: 1rem 0;
  }
  
  /* Media Queries */
  @media screen and (max-width: 768px) {

    .container-board {
      margin: 0;
      padding: 0;
      width: 100%;
    }
    

    #board {
      width: 100%;
      touch-action: manipulation;
    }
    .btn {
        width: 100%;
      }

     .opening-button, #flag-last-drill-button, #remove-last-flagged-drill-btn, #toggle-readme-btn {
      width: 80%;

        margin-left: 10%;
    }

    .small-text {
        margin-left: 10%;
    }

    #manage-openings-container {
        margin-left: 10%;
    }
    #logout-btn {
        margin-left: 10%;
    }
    
    .text2-left {
        margin-left: 10%;
    }
}
  
  @media (min-width: 768px) {
    body {
      padding: 2rem;
    }
  }
  
  /* Modal Styles */
  .modal {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
  }
  
  .modal-content {
    background-color: white;
    margin: 15% auto;
    padding: 20px;
    width: 80%;
    max-width: 500px;
    text-align: center;
  }
  
  .hidden {
    display: none;
  }
  

